--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         <h2>Contact Us:</h2>
         <p>
             If you have any questions about the data deletion process, please contact us at 
-            <a href="mailto:support.goodlystories@example.com">support.goodlystories@example.com</a>.
+            <a href="mailto:support.goodlystories@example.com">edenaxis1@gmail.com</a>.
             <em>(Replace with your actual support email address)</em>
         </p>
 
