--- a/privacy.html
+++ b/privacy.html
@@ -155,8 +155,8 @@
                     <li>
                         To initiate an account and data deletion request, please visit our dedicated data deletion request page:
                         <br>
-                        <a href="YOUR_GITHUB_PAGES_DELETION_REQUEST_URL_HERE" target="_blank" rel="noopener noreferrer">
-                            YOUR_GITHUB_PAGES_DELETION_REQUEST_URL_HERE
+                        <a href="https://edenchisvo.github.io/GoodlyStories" target="_blank" rel="noopener noreferrer">
+                        
                         </a>
                         <br>
                         <em>(Please replace this with the actual URL of your GitHub Pages deletion request page).</em>
