--- a/privacy.html
+++ b/privacy.html
@@ -156,7 +156,7 @@
                         To initiate an account and data deletion request, please visit our dedicated data deletion request page:
                         <br>
                         <a href="https://edenchisvo.github.io/GoodlyStories" target="_blank" rel="noopener noreferrer">
-                        
+                        Data Deletion Request Page
                         </a>
                         <br>
                         <em>(Please replace this with the actual URL of your GitHub Pages deletion request page).</em>
